manifests/kyverno/clusterpolicy-verify-images.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-image-signatures
spec:
  admission: true
  background: true
  emitWarning: false
  validationFailureAction: Enforce
  webhookTimeoutSeconds: 30
  rules:
    - name: verify-cosign-signature
      match:
        any:
          - resources:
              kinds:
                - Pod
      skipBackgroundRequests: true
      verifyImages:
        - imageReferences:
            - "registry.infra.tgy.io/*"
          attestors:
            - entries:
                - keys:
                    publicKeys: |-
                      -----BEGIN PUBLIC KEY-----
                      MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEEwj7kCwLmafF4470wPuk97Lhbho0
[...]
                      -----END PUBLIC KEY-----
                    signatureAlgorithm: sha256
                  signatureAlgorithm: sha256
          mutateDigest: false
          required: true
          verifyDigest: true
          useCache: true
